.provarCaches/00D410000011HE0EAM/objects/rstk__pohdrrev__c.object
<CustomObject>
    <description>pohdrrev__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid, nor the externalid field itself, is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__pohdrrev_ordno__r.rstk__externalid__c &amp; &apos;_&apos; &amp; TEXT(rstk__pohdrrev_seqno__c)</formula>
        <inlineHelpText>This is an internal system field used to define the external ID of a record, which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pohdrrev_billtoseqno__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Revised Bill To Sequence Number</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pohdrrev_carrier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Carrier to be used for this order.  Defaults from Vendor record, if supplied.</inlineHelpText>
        <label>Carrier</label>
        <referenceTo>rstk__sycarrier__c</referenceTo>
        <relationshipName>POHDRREVs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__pohdrrev_div__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the Division associated with this PO</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipName>divpohdrrevs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__pohdrrev_fob__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the PO&apos;s FOB code from the system codes table.</inlineHelpText>
        <label>Freight On Board</label>
        <referenceTo>rstk__syfob__c</referenceTo>
        <relationshipName>POHDRREVs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__pohdrrev_frghtrm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Freight Terms for this PO, defaults from Vendor master.</inlineHelpText>
        <label>Freight Terms</label>
        <referenceTo>rstk__syfrghtrm__c</referenceTo>
        <relationshipName>POHDRREVs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__pohdrrev_mailtoseqno__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Sequence Number of the Mail-to Address</inlineHelpText>
        <label>Revised Mail To Sequence Number</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pohdrrev_ordno__c</fullName>
        <inlineHelpText>This is the Purchase Order Number.  It is auto-assigned when converting requisitions to purchase orders, but can be overridden.  Must be user-supplied when manually creating purchase orders.</inlineHelpText>
        <label>Purchase Order Number</label>
        <referenceTo>rstk__pohdr__c</referenceTo>
        <relationshipName>POHDRREVs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__pohdrrev_rev__c</fullName>
        <inlineHelpText>Displays the current Revision status for this PO.</inlineHelpText>
        <label>Revision</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pohdrrev_seqno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Sequence Number</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pohdrrev_shiptoseqno__c</fullName>
        <inlineHelpText>This is the Sequence Number of the Ship-to Address</inlineHelpText>
        <label>Revised Ship To Sequence Number</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pohdrrev_shipviatype__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The shipping method to be used for this PO, defaults from Vendor Master Shipping Method found on Shipping tab.   Must be valid shipping method from Shipping Methods table.</inlineHelpText>
        <label>Ship Via Type</label>
        <referenceTo>rstk__syshipviatype__c</referenceTo>
        <relationshipName>POHDRREVs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__pohdrrev_site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the Site associated with this PO</inlineHelpText>
        <label>Site</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipName>pohdrrevs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__pohdrrev_sts__c</fullName>
        <inlineHelpText>Current revision status.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Implemented</fullName>
                </value>
                <value>
                    <fullName>Released</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__pohdrrev_tempid__c</fullName>
        <inlineHelpText>Temporary Id Master</inlineHelpText>
        <label>temp id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pohdrrev_terms__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The current Terms for the Purchase Order.</inlineHelpText>
        <label>Terms</label>
        <referenceTo>rstk__syterms__c</referenceTo>
        <relationshipName>POHDRREVs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__pohdrrev_vendagreeno__c</fullName>
        <inlineHelpText>The Vendor&apos;s Agreement Number.</inlineHelpText>
        <label>Vendor’s Agreement Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pohdrrev_vendcontact__c</fullName>
        <inlineHelpText>Vendor&apos;s Contact information.  Defaults from Vendor Master record.</inlineHelpText>
        <label>Vendor’s Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pohdrrev_vendrev__c</fullName>
        <inlineHelpText>The Vendor&apos;s current revision.</inlineHelpText>
        <label>Vendor Revision</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pohdrrev_vendslsordno__c</fullName>
        <inlineHelpText>Sales Order Number provided by the Vendor.  Reference only, not required.</inlineHelpText>
        <label>Vendor’s Sales Order Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>This is an internal system field not currently displayed on any Rootstock User pages</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>This is an internal system field which is not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>PO Header Revision</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <columns>NAME</columns>
        <columns>rstk__pohdrrev_div__c</columns>
        <columns>rstk__pohdrrev_ordno__c</columns>
        <columns>rstk__pohdrrev_rev__c</columns>
        <columns>rstk__pohdrrev_seqno__c</columns>
        <columns>rstk__pohdrrev_sts__c</columns>
        <columns>rstk__pohdrrev_billtoseqno__c</columns>
        <columns>rstk__pohdrrev_shiptoseqno__c</columns>
        <columns>rstk__pohdrrev_mailtoseqno__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__PO_Header_Revisions</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__externalid__c</columns>
        <columns>NAME</columns>
        <columns>rstk__pohdrrev_div__c</columns>
        <columns>rstk__pohdrrev_sts__c</columns>
        <columns>rstk__pohdrrev_ordno__c</columns>
        <columns>rstk__pohdrrev_rev__c</columns>
        <columns>rstk__pohdrrev_seqno__c</columns>
        <columns>rstk__pohdrrev_billtoseqno__c</columns>
        <columns>rstk__pohdrrev_shiptoseqno__c</columns>
        <columns>rstk__pohdrrev_mailtoseqno__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>PO Header Revisions</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>POHDRREV Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PO Header Revisions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>